# FRZ

./: .gitignore  CMakeLists.txt  FRZ.py  Makefile  README.md
config/: bin_limits  duke_run_all  duke_run_all.sh  local_run_all  local_run_all.sh  samples_mc12a_nominal.json  setup
doc/: dox.cfg
include/FRZ/: Common.h  FinalState.h  HistMaker.h  Jet.h  Lepton.h  LeptonPair.h  LinkDef.h  MET.h  PhysicsObject.h  Sample.h  SampleHolder.h  Swizzler.h  Utils.h
plotting/: FRZ_plot.py  FRZ_plot_mpl.py  FRZ_plot_mpl2.py  plot_utils.py
python/: FRZ.py
src/: FinalState.cxx  HistMaker.cxx  Jet.cxx  Lepton.cxx  LeptonPair.cxx  MET.cxx  Sample.cxx  SampleHolder.cxx  Swizzler.cxx
